--- a/frontend/src/components/SongList.css
+++ b/frontend/src/components/SongList.css
@@ -1,20 +1,28 @@
-.songlist-container {
-    display: flex;
-    flex-direction: row;
-    row-gap: 10px;
-    column-gap: 10px;
-    justify-content: flex-start;
+.container {
+  max-width: 1280px;
+  padding: 24px;
+  margin: 0 auto;
 }
 
-.title-header {
-    display: inline-block;
-    width: 400px;
+.table {
+  width: 100%;
+  font-size: 14px;
+  border-collapse: collapse;
 }
 
-.album-header {
-    width: 350px;
+.table th {
+  font-weight: 400;
+  color: rgb(179, 179, 179);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  padding: 0;
 }
 
-.genres-header {
-    width: 300px;
+.table thead tr {
+  text-align: left;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  height: 36px;
+}
+
+.table tbody tr:first td {
+  padding-top: 16px;
 }
