--- a/frontend/src/components/SearchBar.css
+++ b/frontend/src/components/SearchBar.css
@@ -1,6 +1,6 @@
 .header {
   width: 100%;
-  background-color: #121212;
+  background-color: #5c2828;
   padding: 28px;
   display: flex;
   align-items: center;
